--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/passport": "^10.3",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.4"
+        "laravel/ui": "^3.4",
+        "twilio/sdk": "^6.35"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
