--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "stripe/stripe-php": "^7.116",
         "twilio/sdk": "^6.35"
     },
     "require-dev": {
