--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "appzcoder/laravel-admin": "^3.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "johnpaulmedina/laravel-usps": "^8.0",
         "laravel/cashier": "^13.11",
         "laravel/framework": "^8.75",
         "laravel/passport": "^10.3",
