--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "stripe/stripe-php": "^7.116",
-        "twilio/sdk": "^6.35"
+        "twilio/sdk": "^6.35",
+        "yajra/laravel-datatables-oracle": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
