--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/ui": "^3.4",
         "stripe/stripe-php": "^7.116",
         "twilio/sdk": "^6.35",
+        "sendgrid/sendgrid": "~7",
         "yajra/laravel-datatables-oracle": "*"
     },
     "require-dev": {
