--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "nikolag/laravel-square": "^3.0",
         "sendgrid/sendgrid": "~7",
         "shippo/shippo-php": "^2.0",
-        "square/square": "19.1.1.20220616",
         "stripe/stripe-php": "^7.116",
         "twilio/sdk": "^6.35",
         "yajra/laravel-datatables-oracle": "*"
