--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "apility/laravel-fcm": "^1.4",
         "appzcoder/laravel-admin": "^3.3",
+        "barryvdh/laravel-dompdf": "^2.0",
         "braintree/braintree_php": "^6.8",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
