--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "braintree/braintree_php": "^6.8",
         "fruitcake/laravel-cors": "^2.0",
+        "google/apiclient": "^2.12.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "johnpaulmedina/laravel-usps": "^8.0",
         "laravel/cashier": "^13.11",
@@ -19,6 +20,7 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "moirei/laravel-google-merchant-api": "^1.1",
         "nikolag/laravel-square": "^3.0",
         "sendgrid/sendgrid": "~7",
         "shippo/shippo-php": "^2.0",
