worked on staff management system

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
         "php": "^7.3|^8.0",
         "apility/laravel-fcm": "^1.4",
         "appzcoder/laravel-admin": "^3.3",
+        "avalara/avataxclient": "^22.9",
         "barryvdh/laravel-dompdf": "^2.0",
         "braintree/braintree_php": "^6.8",
         "fruitcake/laravel-cors": "^2.0",
-        
         "guzzlehttp/guzzle": "^7.0.1",
         "johnpaulmedina/laravel-usps": "^8.0",
         "laravel/cashier": "^13.11",
@@ -20,10 +20,8 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-       
         "nikolag/laravel-square": "^3.0",
         "sendgrid/sendgrid": "~7",
-        
         "stripe/stripe-php": "^7.116",
         "twilio/sdk": "^6.35",
         "yajra/laravel-datatables-oracle": "*"
