--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "amzn/amazon-pay-api-sdk-php": "^2.4",
         "apility/laravel-fcm": "^1.4",
         "appzcoder/laravel-admin": "^3.3",
         "avalara/avataxclient": "^22.9",
