--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "nikolag/laravel-square": "^3.0",
+        "quickbooks/v3-php-sdk": "^6.0",
         "sendgrid/sendgrid": "~7",
         "stripe/stripe-php": "^7.116",
         "twilio/sdk": "^6.35",
